rewritten by GPT

--- a/copy/index-copy.yaml
+++ b/copy/index-copy.yaml
@@ -2,51 +2,51 @@ index-hero-pill-1: "Cloud Strategy"
 index-hero-pill-2: "Managed Hosting"
 index-hero-pill-3: "Analytics Ops"
 
-index-hero-h: "Seamless Integration for Your Digital Needs"
-index-hero-p: "BridgeTech Dynamics orchestrates cloud, hosting, and analytics ecosystems for small to mid-sized businesses. We connect every data point, platform, and workflow so you can deliver standout customer experiences without operational headaches."
+index-hero-h: "Simple Solutions for Your Digital Needs"
+index-hero-p: "BridgeTech Dynamics helps small to mid-sized businesses manage cloud, hosting, and analytics. We connect your data and tools so you can offer great customer experiences without stress."
 
 index-hero-stat-1-h: "99.99%"
-index-hero-stat-1-p: "Targeted availability across managed platforms"
+index-hero-stat-1-p: "High uptime for our managed services"
 
 index-hero-stat-2-h: "<1s"
-index-hero-stat-2-p: "Optimized WordPress page load times"
+index-hero-stat-2-p: "Fast WordPress page loading times"
 
 index-hero-stat-3-h: "24/7"
-index-hero-stat-3-p: "Certified cloud and hosting support bench"
+index-hero-stat-3-p: "Expert support for cloud and hosting anytime"
 
-index-why: "Why BridgeTech?"
-index-why-h: "Blueprinted for performance, security, and measurable growth"
-index-why-p: "We pair enterprise-grade infrastructure thinking with the pragmatism SMBs need. From zero-downtime migrations to bulletproof analytics pipelines, every engagement is engineered to remove risk and accelerate insight."
+index-why: "Why Choose BridgeTech?"
+index-why-h: "Built for performance, security, and growth"
+index-why-p: "We combine high-quality infrastructure with practical solutions for SMBs. From smooth migrations to reliable analytics, we aim to reduce risk and speed up insights."
 
 index-feature-managed-1-h: "Managed WordPress Hosting"
-index-feature-managed-1-p: "CDN-tuned, WAF-protected, and backed with one-click restores for confident publishing velocity."
+index-feature-managed-1-p: "Optimized with security features and easy backup options for safe and fast publishing."
 
-index-feature-managed-2-h: "Cloud Migration Factory"
-index-feature-managed-2-p: "Strategy-to-cutover playbooks that keep your applications online while we modernize every workload."
+index-feature-managed-2-h: "Cloud Migration Solutions"
+index-feature-managed-2-p: "Carefully planned migrations that keep your apps running while we upgrade your systems."
 
 index-feature-managed-3-h: "Custom Hosting Design"
-index-feature-managed-3-p: "Right-sized, compliance-ready environments built around your unique throughput and availability goals."
+index-feature-managed-3-p: "Hosting environments tailored to your needs for reliability and compliance."
 
-index-feature-managed-4-h: "Data & Tagging Governance"
-index-feature-managed-4-p: "From data layer standardization to consent-aware deployment, your measurement stack stays audit-proof."
+index-feature-managed-4-h: "Data Management"
+index-feature-managed-4-p: "We ensure your data stays organized and compliant, making your insights reliable."
 
-index-spectrum: "Service Spectrum"
-index-spectrum-h: "End-to-end stewardship across your digital ecosystem"
-index-spectrum-p: "Whether you need lightning-fast WordPress, hybrid cloud architecture, or always-on analytics observability, BridgeTech Dynamics keeps teams aligned on delivery and outcomes."
+index-spectrum: "Our Services"
+index-spectrum-h: "Complete management of your digital environment"
+index-spectrum-p: "Whether you need fast WordPress, cloud services, or continuous analytics, BridgeTech Dynamics aligns your teams for effective results."
 
-index-spectrum-h-1: "Holistic Delivery Teams"
-index-spectrum-p-1: "Full-stack specialists coordinate with your stakeholders and vendors so every release stays on schedule and on budget."
+index-spectrum-h-1: "Coordinated Teams"
+index-spectrum-p-1: "Specialists work with you and your partners to keep projects on track and on budget."
 
 index-spectrum-h-2: "Built-in Compliance"
-index-spectrum-p-2: "HIPAA, SOC2, GDPR—our frameworks are pre-baked with the controls you need to pass audits without stress."
+index-spectrum-p-2: "Our services meet standards like HIPAA and GDPR so you can pass audits easily."
 
-index-spectrum-h-3: "Observability at the Core"
-index-spectrum-p-3: "Gain clarity into uptime, cost trends, and campaign attribution with living dashboards that executives and engineers actually use."
+index-spectrum-h-3: "Insightful Analytics"
+index-spectrum-p-3: "Easily track uptime, costs, and campaign performance with dashboards that are user-friendly for everyone."
 
-index-highlight-banner-h: "Transform your data into actionable insights effortlessly."
-index-highlight-banner-p: "Ready to orchestrate a resilient, insight-driven stack? BridgeTech Dynamics is your partner for turning complexity into clarity."
-index-highlight-banner-a: "Meet the strategist behind the bridge"
+index-highlight-banner-h: "Turn your data into clear insights with ease."
+index-highlight-banner-p: "Ready to build a dependable system? BridgeTech Dynamics is here to help simplify complexity."
+index-highlight-banner-a: "Meet our strategist"
 
-index-contact-highlight: "Book a discovery session"
-index-contact-heading: "Let’s co-create the stack that powers your next chapter."
-index-contact-body: "Share a few details and we’ll respond within one business day with a tailored implementation roadmap."
+index-contact-highlight: "Schedule a discovery session"
+index-contact-heading: "Let’s work together on the system that supports your next step."
+index-contact-body: "Provide your details and we will respond within one business day with a personalized implementation plan."
