--- a/copy/about-copy.yaml
+++ b/copy/about-copy.yaml
@@ -1,55 +1,55 @@
 about-strategist: "Meet the BridgeTech Dynamics strategist"
 
-about-hero-pill-1: "Certified cloud strategist"
-about-hero-pill-2: "Full-stack savvy"
-about-hero-pill-3: "Insight obsessed"
+about-hero-pill-1: "Certified cloud expert"
+about-hero-pill-2: "Well-versed in all aspects"
+about-hero-pill-3: "Focused on insights"
 
-about-hero-h: "Bridging the gaps between systems, teams, and growth."
-about-hero-p: "BridgeTech Dynamics is led by a freelance tech development strategist who has spent the last decade connecting business goals with resilient cloud, hosting, and analytics foundations for SMB innovators."
+about-hero-h: "Bridging systems, teams, and growth."
+about-hero-p: "BridgeTech Dynamics is led by a seasoned tech strategist dedicated to connecting business goals with reliable cloud and analytics solutions for innovative SMBs."
 
-about-hero-action: "See how we partner"
+about-hero-action: "See how we work together"
 
-about-story-highlight: "Brand Story"
-about-story-heading: "Innovation grounded in practicality"
-about-story-body: "The BridgeTech ethos is simple: technology should feel seamless. We design systems that let growing teams experiment, launch, and analyze without worrying about downtime, broken data, or costly surprises."
+about-story-highlight: "Our Story"
+about-story-heading: "Practical innovation"
+about-story-body: "At BridgeTech, we believe technology should be seamless. We create systems that allow teams to experiment and grow without disruption or surprises."
 
-about-story-holistic-h: "Holistic Expertise"
-about-story-holistic-p: "Front-end, back-end, data engineering, and DevOps fluency ensure no gaps between ideas and delivery."
+about-story-holistic-h: "Comprehensive Expertise"
+about-story-holistic-p: "Our skills in front-end, back-end, data, and DevOps ensure smooth transition from ideas to execution."
 
-about-story-future-proof-h: "Future-Proof Thinking"
-about-story-future-proof-p: "We evaluate emerging cloud services and analytics tools so your stack stays modern without becoming experimental."
+about-story-future-proof-h: "Future-Ready Solutions"
+about-story-future-proof-p: "We explore new cloud and analytics tools so your system stays up to date without unnecessary risks."
 
-about-story-people-h: "People-Centered Delivery"
-about-story-people-p: "Stakeholder workshops, clear roadmaps, and proactive communication keep your teams informed and confident."
+about-story-people-h: "Team-Centered Delivery"
+about-story-people-p: "Workshops with stakeholders, clear plans, and open communication keep everyone informed and confident."
 
-about-values-highlight: "Values"
-about-values-heading: "Principles that guide every engagement"
-about-values-body: "These pillars align every decision we make—from architecture choices to analytics instrumentation and post-launch support."
+about-values-highlight: "Our Values"
+about-values-heading: "Guiding principles for every project"
+about-values-body: "These principles shape our decisions, from design choices to ongoing support."
 
 about-values-1: "Clarity First"
-about-values-1-h: "Translate complexity into action"
-about-values-1-p: "We turn technical nuance into clear plans so stakeholders understand the impact of every sprint and release."
+about-values-1-h: "Make complex ideas simple"
+about-values-1-p: "We convert technical details into understandable plans so everyone knows the impact of every step."
 
-about-values-2: "Reliability Matters"
-about-values-2-h: "Protect the customer experience"
-about-values-2-p: "Redundant design, automated QA, and continuous monitoring keep your digital presence dependable."
+about-values-2: "Reliability is Key"
+about-values-2-h: "Protect the user experience"
+about-values-2-p: "Reliable design and monitoring ensure your online presence is dependable."
 
 about-values-3: "Measure Everything"
-about-values-3-h: "Insights drive iteration"
-about-values-3-p: "Robust tagging and analytics pipelines give you trustworthy data to inform what comes next."
+about-values-3-h: "Insights drive progress"
+about-values-3-p: "Effective tracking systems provide reliable data for future decisions."
 
-about-partnership-highlight: "Partnership Approach"
-about-partnership-heading: "Strategist + accelerator for your next digital initiative"
-about-partnership-body: "BridgeTech Dynamics plugs into your organization as an extension of the team, identifying blockers, designing for scale, and enabling constant improvement."
+about-partnership-highlight: "Our Collaborative Approach"
+about-partnership-heading: "Partnering for your next digital project"
+about-partnership-body: "BridgeTech Dynamics acts as an extension of your team, identifying obstacles and designing for growth."
 
-about-partnership-1-h: "Discovery Intensive"
-about-partnership-1-p: "Collaborative workshops uncover opportunities across hosting, cloud, and analytics in one unified plan."
+about-partnership-1-h: "Discovery Workshops"
+about-partnership-1-p: "Collaborative sessions to find opportunities in hosting, cloud, and analytics, creating a unified plan."
 
-about-partnership-2-h: "Roadmap & Runbooks"
-about-partnership-2-p: "Clear phases, ownership alignment, and living documentation ensure confidence before implementation begins."
+about-partnership-2-h: "Roadmaps & Guides"
+about-partnership-2-p: "Clearly defined phases and documentation ensure everyone is aligned before we start."
 
 about-partnership-3-h: "Enable & Empower"
-about-partnership-3-p: "Training, knowledge transfer, and optimized dashboards keep your internal teams empowered after launch."
+about-partnership-3-p: "Training and optimized tools empower your teams after launch."
 
-about-highlight-h: "Let’s transform your data into actionable insights, strengthen your hosting foundations, and migrate with confidence."
-about-highlight-p: "Ready to bridge the gap?"
+about-highlight-h: "Let’s transform your data into helpful insights and improve your hosting."
+about-highlight-p: "Ready to start?"
